--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -6,3 +6,66 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
+
+body{
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.7;
+    color: #777;
+    padding: 30px;
+}
+
+.header{
+    height: 95vh;
+    background-image: linear-gradient(to right, #7ed56fb0,#28b4859c),url("../img/hero.jpg");
+    background-size: cover;
+    background-position: top;
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100% );
+    position: relative;
+}
+
+.logo-box{
+    position: absolute;
+    top: 40px;
+    left: 40px;;
+}
+
+.logo{
+    height: 35px;
+
+}
+
+.text-box{
+    position: absolute;
+    top: 40%;
+    left: 40%;
+}
+
+.heading-primary{
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    
+
+}
+
+.heading-primary--main{
+    display: block;
+    font-size: 60px;
+    font-weight: 400;
+
+}
+
+.heading-primary--sub{
+    display: block;
+    font-size: 45px;
+    font-weight: 300;
+}
